@@ -57,6 +57,17 @@ module Padrino
       def cache_template_file!(template_file, render_options)
         (@_cached_templates ||= {})[render_options] = template_file || []
       end
+
+      def fetch_layout_path
+        layout_name = @layout || :application
+        @_cached_layout ||= {}
+        cached_layout_path = @_cached_layout[layout_name]
+        return cached_layout_path if cached_layout_path
+        has_layout_at_root = Dir["#{views}/#{layout_name}.*"].any?
+        layout_path = has_layout_at_root ? layout_name.to_sym : File.join('layouts', layout_name.to_s).to_sym
+        @_cached_layout[layout_name] = layout_path
+        layout_path
+      end
     end
 
     private
@@ -79,19 +90,19 @@ module Padrino
         options.merge!(data) && data = nil if data.is_a?(Hash)
 
         # If an engine is a string then this is a likely a path to be resolved
-        data, engine = *resolve_template(engine, options) if data.nil?
+        data, engine = *resolve_template(engine, options.dup) if data.nil?
 
         # Sinatra 1.0 requires an outvar for erb and erubis templates
         options[:outvar] ||= '@_out_buf' if [:erb, :erubis].include?(engine)
 
         # Resolve layouts similar to in Rails
         if (options[:layout].nil? || options[:layout] == true) && !self.class.templates.has_key?(:layout)
-          options[:layout] = resolved_layout
+          options[:layout] = resolved_layout || false # We need to force layout false so sinatra don't try to render it
           logger.debug "Resolving layout #{options[:layout]}" if defined?(logger) && options[:layout].present?
         end
 
         # Pass arguments to Sinatra render method
-        super(engine, data, options, locals, &block)
+        super(engine, data, options.dup, locals, &block)
       end
 
       ##
@@ -103,11 +114,8 @@ module Padrino
       # => "/layouts/custom"
       #
       def resolved_layout
-        layout_var = self.class.instance_variable_get(:@layout) || :application
-        has_layout_at_root = Dir["#{self.settings.views}/#{layout_var}.*"].any?
-        layout_path = has_layout_at_root ? layout_var.to_sym : File.join('layouts', layout_var.to_s).to_sym
-        located_layout = resolve_template(layout_path, :strict_format => true, :raise_exceptions => false)
-        located_layout ? located_layout[0] : nil # Fetch the template file for layout
+        located_layout = resolve_template(self.class.fetch_layout_path, :strict_format => true, :raise_exceptions => false)
+        located_layout ? located_layout[0] : false
       end
 
       ##
